--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "heroku-washtub",
   "version": "0.0.1",
-  "description": "Wash your production data for development use with Washtub!",
+  "description": "Clean your production data for development use with Washtub!",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
