--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "chai": "^4.1.2",
     "co": "^4.6.0",
     "heroku-cli-util": "^8.0.0",
     "heroku-pg": "^2.9.0",
