Fix typo in projections.

--- a/.projections.json
+++ b/.projections.json
@@ -10,7 +10,7 @@
     "template": [
       "'use strict'",
       "",
-      "module.epxorts = '...'"
+      "module.exports = '...'"
     ]
   },
   "spec/*.js": {
