--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "heroku-washtub",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Clean your production data for development use with Washtub!",
   "keywords": "data anonymization privacy compliance",
   "main": "index.js",
@@ -16,5 +16,6 @@
     "heroku-pg": "^2.9.0",
     "lodash": "^4.17.5",
     "mocha": "^5.0.1"
-  }
+  },
+  "files": ["index.js", "lib/*", "commands/washtub/*"]
 }
